Добавлен эндпойнт на удалений задачи по ID
